feat(filme): alteracoes incrives 1.2

--- a/src/modulo-09-java/Locadora/src/main/resources/messages_pt_BR.properties
+++ b/src/modulo-09-java/Locadora/src/main/resources/messages_pt_BR.properties
@@ -1,3 +1,7 @@
-pessoa_id=ID
-pessoa_nome=Nome
-pessoa_sobrenome=Pessoa Sobrenome
+filme_nome = Nome
+filme_genero = Genero
+filme_diretor = Nome Diretor
+filme_dt_lancamento = Data Lancamento
+filme_elenco = Elenco
+filme_classificacao = Classificacao
+filme_idioma = Idioma
