feat(filme): Alteracoes incriveis 1.3

--- a/src/modulo-09-java/Locadora/src/main/resources/messages_pt_BR.properties
+++ b/src/modulo-09-java/Locadora/src/main/resources/messages_pt_BR.properties
@@ -5,3 +5,11 @@ filme_dt_lancamento = Data Lancamento
 filme_elenco = Elenco
 filme_classificacao = Classificacao
 filme_idioma = Idioma
+
+genero_nome = Genero
+
+elenco_elenco = Atores
+
+classificacao_idade = Idade
+
+idioma_linguagem = Dublagem
